--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@
 ========================= */
 .home-hero {
     height: 100vh;
-    background: url("images/logo.png") center center no-repeat;
+    background: url("images/fond_accueil_desktop.png") center center no-repeat;
     background-size: contain;
     position: relative;
     overflow: hidden;
