--- a/css/agenda_mobile.css
+++ b/css/agenda_mobile.css
@@ -74,8 +74,7 @@
         justify-content: center;
     }
     .agenda-stamp {
-        width: 40px;
-        height: 40px;
+        max-width: 70px;
         cursor: pointer;
         transition: transform 0.3s;
     }
